- Fixed bug #44327 (PDORow::queryString property & numeric offsets / Crash)