ext/pdo/pdo_stmt.c
@@ -2622,6 +2622,10 @@ static zval *row_prop_or_dim_read(zval *object, zval *member, int type TSRMLS_DC
 	pdo_stmt_t * stmt = (pdo_stmt_t *) zend_object_store_get_object(object TSRMLS_CC);
 	int colno = -1;
 
+	if ((Z_TYPE_P(member) == IS_STRING || Z_TYPE_P(member) == IS_UNICODE) &&
+		memcmp(Z_UNIVAL_P(member).v, "queryString", sizeof("queryString")-1)) {
+		return std_object_handlers.read_property(object, member, IS_STRING TSRMLS_CC);
+	}
 	MAKE_STD_ZVAL(return_value);
 		
 	if (Z_TYPE_P(member) == IS_LONG) {
